# univention-domain-join

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  README.md  cli.py  com.univention.univention-domain-join-cli.policy  com.univention.univention-domain-join.policy  gui.py  setup.cfg  setup.py  univention-domain-join-gui.desktop  univention-domain-join.desktop
debian/: changelog  clean  control  copyright  python3-univention-domain-join.install  rules  univention-domain-join-cli.install  univention-domain-join-cli.links  univention-domain-join-gui.install  univention-domain-join-gui.links  univention-domain-join.install  univention-domain-join.links
debian/source/: options
distributions/: ubuntu.py
join_steps/: dns_configurator.py  hosts_configurator.py  kerberos_configurator.py  ldap_configurator.py  login_manager_configurator.py  pam_configurator.py  root_certificate_provider.py  sssd_configurator.py  utils.py
scripts/: cli.py  gui.py  gui_sudo_wrapper.sh
src/: cli.py  gui_sudo_wrapper.sh
src/distributions/: ubuntu.py
src/join_steps/: ldap_configurator.py  root_certificate_provider.py
univention_domain_join/distributions/: __init__.py  linuxmint.py  ubuntu.py
univention_domain_join/join_steps/: dns_configurator.py  kerberos_configurator.py  ldap_configurator.py  login_manager_configurator.py  pam_configurator.py  root_certificate_provider.py  sssd_configurator.py
univention_domain_join/utils/: __init__.py  distributions.py  domain.py  general.py  ldap.py
