[metadata]
name = univention-domain-join
version = 1.0
maintainer = Univention GmbH
maintainer_email = packages@univention.de
description = UCS Domain Join Assistent
long_description = file:README.md
long_description_content_type = "text/markdown"
license = GNU Affero General Public License v3
classifiers =
	Development Status :: 5 - Production/Stable
	Environment :: Console
	Environment :: X11 Applications :: Qt
	Intended Audience :: System Administrators
	Programming Language :: Python :: 3.7
	License :: OSI Approved :: GNU Affero General Public License v3
	Natural Language :: English
	Operating System :: POSIX :: Linux
	Topic :: System :: Systems Administration :: Authentication/Directory :: LDAP

[options]
zip_safe = False
python_requires = >=3.7
packages = find:
install_requires =
	dnspython
	IPy
	netifaces
	python-ldap

[options.extras_require]
gui = PyQt5
dev = PyQt5-stubs; flake8; isort; mypy

[flake8]
max-line-length = 220
ignore =
	# W191 indentation contains tabs
	W191,
	# E501 line too long
	E501,
	# W504 line break after binary operator
	W504,
exclude =
	.git,
	__pycache__,
	build,
	dist,
	venv,

[isort]
line_length = 220
multi_line_output = 3
include_trailing_comma = 1
src_paths = univention_domain_join

[mypy]
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
no_implicit_optional = True
exclude = (?x)(build|dist|venv|setup\.py)
files = .

[mypy-ldap.*]
ignore_missing_imports = True

[mypy-IPy]
ignore_missing_imports = True

[mypy-netifaces]
ignore_missing_imports = True
